--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,11 @@
         </plugins>
     </build>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr-runtime</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+    </dependencies>
 </project>
